--- a/app/package.json
+++ b/app/package.json
@@ -16,8 +16,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "e2e": "npx cypress open"
+    "e2e": "npx cypress open",
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
