--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -24,8 +24,8 @@ jobs:
         working-directory: ./app
 
       - name: Run tests
-        run: npm test
-        working-directory: ./app/tests
+        run: npm run test
+        working-directory: app/tests
 
   e2e-testing:
     runs-on: ubuntu-latest
@@ -36,5 +36,4 @@ jobs:
       - name: Cypress run
         uses: cypress-io/github-action@v5
         with:
-          build: npm run build
-          start: npm start
+          browser: chrome
