--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -24,8 +24,8 @@ jobs:
         working-directory: ./app
 
       - name: Run tests
-        run: npm run test
-        working-directory: app/tests
+        run: npm  test
+        working-directory: app/tests/
 
   e2e-testing:
     runs-on: ubuntu-latest
@@ -33,6 +33,9 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
+      - name: Install dependancies
+        run: npm ci
+        working-directory: ./app
       - name: Cypress run
         uses: cypress-io/github-action@v5
         with:
