--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -9,12 +9,14 @@ on:
 jobs:
   unit-testing:
     runs-on: ubuntu-latest
-
+    strategy:
+      matrix:
+        node-version: [16, 18, 20]
     steps:
       - name: Checkout
         uses: actions/checkout@v3
 
-      - name: Use Node.js ${{ matrix.node-version }}
+      - name: Setup Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v3
         with:
           node-version: ${{ matrix.node-version }}
@@ -25,7 +27,7 @@ jobs:
 
       - name: Run tests
         run: npm  test
-        working-directory: app/tests/
+        working-directory: app/
 
   e2e-testing:
     runs-on: ubuntu-latest
@@ -40,3 +42,6 @@ jobs:
         uses: cypress-io/github-action@v5
         with:
           browser: chrome
+          build: npm build
+          start: npm start
+          wait-on: "http://localhost:3000"
