--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -35,13 +35,8 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
-      - name: Install dependancies
-        run: npm ci
-        working-directory: ./app
       - name: Cypress run
         uses: cypress-io/github-action@v5
         with:
           browser: chrome
-          build: npm build
-          start: npm start
-          wait-on: "http://localhost:3000"
+          command: npx cypress run
