--- a/app/package.json
+++ b/app/package.json
@@ -38,8 +38,6 @@
     ]
   },
   "devDependencies": {
-    "cypress": "^12.14.0",
-    "geckodriver": "^4.0.4",
-    "nightwatch": "^2.6.21"
+    "cypress": "^12.14.0"
   }
 }
