--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -31,15 +31,18 @@ jobs:
 
   e2e-testing:
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        node-version: [16, 18, 20]
 
     steps:
       - name: Checkout
         uses: actions/checkout@v3
       - uses: actions/setup-node@v3
         with:
-          node-version: "18"
-          cache: "npm"
-          cache-dependancy-path: src/package-lock.json
+          node-version: ${{ matrix.node-version }}
+          cache: npm
+          cache-dependancy-path: app/package-lock.json
       - name: Cypress run
         uses: cypress-io/github-action@v5
         with:
