--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -38,11 +38,17 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
+
       - uses: actions/setup-node@v3
         with:
           node-version: ${{ matrix.node-version }}
-          cache: npm
-          cache-dependancy-path: app/package-lock.json
+          cache: "npm"
+          cache-dependancy-path: "app/package-lock.json"
+
+      - name: Install dependancies
+        run: npm ci
+        working-directory: ./app
+
       - name: Cypress run
         uses: cypress-io/github-action@v5
         with:
