--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -7,7 +7,7 @@ on:
     branches: ["main"]
 
 jobs:
-  unit-testing:
+  unit-and-e2e-test:
     runs-on: ubuntu-latest
     strategy:
       matrix:
@@ -25,31 +25,11 @@ jobs:
         run: npm ci
         working-directory: ./app
 
-      - name: Run tests
+      - name: Run unit tests
         run: npm  test
         working-directory: app/
 
-  e2e-testing:
-    runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        node-version: [16, 18, 20]
-
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v3
-
-      - uses: actions/setup-node@v3
-        with:
-          node-version: ${{ matrix.node-version }}
-          cache: "npm"
-          cache-dependancy-path: "app/package-lock.json"
-
-      - name: Install dependancies
-        run: npm ci
-        working-directory: ./app
-
-      - name: Cypress run
+      - name: Run e2e tests
         uses: cypress-io/github-action@v5
         with:
           browser: chrome
