--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -33,5 +33,6 @@ jobs:
         uses: cypress-io/github-action@v5
         with:
           browser: chrome
-          command: npx cypress run
           working-directory: app/
+          build: npm run build
+          start: npm start
